Seperate Credential Providers and Servlet Autethenticaters into sub-pages and fix accordion jumping

--- a/frank-doc-frontend/src/app/components/header/header.component.scss
+++ b/frank-doc-frontend/src/app/components/header/header.component.scss
@@ -27,6 +27,7 @@ header {
   nav {
     & > ul {
       display: flex;
+      margin: 0;
       padding: 0;
       align-items: center;
       list-style: none;
