--- a/frank-doc-frontend/src/app/views/home/home.component.scss
+++ b/frank-doc-frontend/src/app/views/home/home.component.scss
@@ -7,6 +7,7 @@
   margin-top: 30px;
 
   .subtitle {
+    margin: 0;
     color: rgba(0, 0, 0, 0.5);
     font-size: 14px;
     font-weight: 600;
